--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div class="challenge1">
+    <div>
       <div class="box red">Box 1</div>
       <div class="box green">Box 2</div>
       <div class="box blue">Box 3</div>
